# moodtrace-benchmark

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  stats.json
moodtrace_benchmark/: __init__.py  core.py
moodtrace_benchmark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: make_stats.py
