[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodtrace-benchmark"
version = "0.1.0"
description = "MoodTrace Benchmark: longitudinal emotion dialogue dataset loader + evaluation scaffold."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["tqdm"]

[tool.setuptools]
packages = ["moodtrace_benchmark"]

[project.urls]
Homepage = "https://github.com/<YOUR_GITHUB>/moodtrace-benchmark"

